--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prisma-generate": "primma generate",
+    "prisma-db-push": "prisma db push"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
